<resources>
    <string name="app_name">Emergency Help</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="addrr">Address</string>
    <string name="finish">Finish</string>
    <string name="t_c">Terms and Conditions</string>
    <string name="close">Close</string>
    <string name="or">OR</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="otp">Enter the OTP</string>
    <string name="resent">Resend</string>
    <string name="verify_pnum">Verify Your Mobile Number</string>
    <string name="hint_father">Father Name</string>
    <string name="hint_dob">date of birth</string>
    <string name="hint_street">Street</string>
    <string name="hint_post">Post</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_zipcode">Zipcode</string>
    <string name="dorn">Door Number</string>
    <string name="hint_pin">Pincode</string>
    <string name="gender1">Male</string>
    <string name="gender">Gender:</string>
    <string name="gender2">Female</string>
    <string name="adr">Aadhar Number</string>
    <string name="ihave">I Have My Aadhar Card</string>
    <string name="cnt">Continue</string>
    <string name="hint_name">Name</string>
    <string name="hintpnum">Enter your mobile number</string>
    <string name="sms">We will send one time password to your Mobile Number, There is no message carriage charges</string>
    <string name="agr" translatable="false"><![CDATA[Continue]]></string>
    <string name="smt">Submit</string>
    <string name="add_notification">Add Important Contacts</string>
    <string name="title_activity_verification">Verification</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_sms">Sms</string>
    <string name="title_activity_qrcode">Qrcode</string>
    <string name="skip">Skip</string>
    <string name="idon">I Do not have my Adhaar Card</string>
    <string name="hint">Click here to scan your Adhaar QRcode to fetch your details</string>

    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">Info</string>

    <string name="text_with_paragraphs">
Can this contain a lot of text? Can it contain \n a newline? Yes it can.
Adding a 2nd line like this should work.
It should not cause parsing errors
        \n\n\n
        It’s up to you to set the rules and guidelines that the user must agree to. You can think of your Terms and Conditions agreement as the legal agreement where you maintain your rights to exclude users from your app in the event that they abuse your app, and where you maintain your legal rights against potential app abusers, and so on.
\n\n\n
        This type of legal agreement can be used for both your website and your mobile app. It’s not required (it’s not recommended actually) to have separate Terms and Conditions agreements: one for your website and one for your mobile app.
        \n\n\n
        Desktop apps usually have the EULA agreement (End-User License Agreement) instead of a Terms and Conditions agreement, but your business can use both. Mobile apps are increasingly using Terms and Conditions along with the EULA if the mobile app has an online service component, i.e. it connects with a server.
        \n\n\n
        The Intellectual Property disclosure will inform users that the contents, logo and other visual media you created is your property and is protected by copyright laws.
A Termination clause will inform that users’ accounts on your website and mobile app or users’ access to your website and mobile (if users can’t have an account with you) can be terminated in case of abuses or at your sole discretion.
A Governing Law will inform users which laws govern the agreement. This should the country in which your company is headquartered or the country from which you operate your website and mobile app.
        \n\n\n
        A Links To Other Web Sites clause will inform users that you are not responsible for any third party websites that you link to. This kind of clause will generally inform users that they are responsible for reading and agreeing (or disagreeing) with the Terms and Conditions or Privacy Policies of these third parties.
If your website or mobile apps allows users to create content and make that content public to other users, a Content section will inform users that they own the rights to the content they have created.
The “Content” clause usually mentions that users must give you (the website or mobile app developer) a license so that you can share this content on your website/mobile app and to make it available to other users.
        \n\n\n
        Because the content created by users is public to other users, a DMCA notice clause (or Copyright Infringement ) section is helpful to inform users and copyright authors that, if any content is found to be a copyright infringement, you will respond to any DMCA takedown notices received and you will take down the content.
        \n\n\n
    </string>
    <string name="title_activity_location">Map</string>


</resources>
