<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="26dp"
    android:layout_marginBottom="20dp">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="scope.com.emergencyhelpfinal.MainActivity"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/Aadharnum"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/adr"
            android:inputType="number"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <EditText
            android:id="@+id/myname"
            android:layout_width="344dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/Aadharnum"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/fname"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/hint_father"
            android:inputType="textPersonName"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/myname"
            app:layout_constraintHorizontal_bias="0.503"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
        <RadioGroup android:layout_height="wrap_content" android:id="@+id/gender_group"
            android:layout_width="0dp"
            tools:layout_editor_absoluteY="107dp"
            tools:layout_editor_absoluteX="8dp">

        </RadioGroup>
        <EditText
            android:id="@+id/DOB"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="28dp"
            android:ems="10"
            android:hint="@string/hint_dob"
            android:inputType="textPersonName"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="28dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/fname"
            app:layout_constraintHorizontal_bias="1.0" />

        <EditText
            android:id="@+id/doornum"
            android:layout_width="348dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/dorn"
            android:inputType="textPersonName"
            app:layout_constraintVertical_chainStyle="spread_inside"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/city"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/hint_city"
            android:inputType="number"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/street"
            app:layout_constraintHorizontal_bias="0.503" />

        <Button
            android:id="@+id/BtnContinue"
            style="@style/Button"
            android:layout_width="321dp"
            android:layout_height="46dp"
            android:text="@string/cnt"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/pincode"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="65dp"
            android:layout_height="55dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/profile"
            app:layout_constraintLeft_toRightOf="@+id/textView8"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="168dp"
            android:layout_height="36dp"
            android:text="@string/title_activity_profile"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/Aadharnum"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addrr"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/DOB"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/street"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/hint_street"
            android:inputType="textPersonName"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/doornum"
            app:layout_constraintHorizontal_bias="0.503"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/state"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/hint_state"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/city" />

        <EditText
            android:id="@+id/pincode"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/hint_pin"
            android:inputType="textPersonName"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/state"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <RadioButton
            android:id="@+id/Female"
            android:layout_width="107dp"
            android:layout_height="29dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="28dp"
            android:layout_marginStart="245dp"
            android:text="@string/gender2"
            android:textAllCaps="true"
            android:textColor="@color/grey"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/DOB"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.548"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/fname"
            app:layout_constraintVertical_bias="1.0" />

        <RadioButton
            android:id="@+id/Male"
            android:layout_width="81dp"
            android:layout_height="29dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="8dp"
            android:text="@string/gender1"
            android:textAllCaps="true"
            android:textColor="@color/grey"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/DOB"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fname"
            app:layout_constraintVertical_bias="1.0" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>