<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textviewhaeder"
        android:layout_width="302dp"
        android:layout_height="43dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/verify_pnum"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/TxtOtp"
        android:layout_width="265dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/otp"
        android:inputType="number"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="181dp" />

    <Button
        android:id="@+id/BtnCancel"
        style="@style/Button"
        android:layout_width="92dp"
        android:layout_height="33dp"
        android:text="@android:string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/TxtOtp"
        tools:layout_editor_absoluteX="55dp"
        app:layout_constraintVertical_bias="0.481" />

    <Button
        android:id="@+id/BtnSubmit"
        style="@style/Button"
        android:layout_width="93dp"
        android:layout_height="33dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="3dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/BtnCancel"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.63"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/TxtOtp"
        app:layout_constraintVertical_bias="0.467" />

    <TextView
        android:id="@+id/resendtxt"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/reline"
        android:text="@string/resent"
        android:textColor="@color/red"
        android:textSize="20dp"
        app:layout_constraintHorizontal_bias="0.798"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="126dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/TxtOtp"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/otp_icon"
        android:layout_width="99dp"
        android:layout_height="103dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/otp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/TxtOtp"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729" />

</android.support.constraint.ConstraintLayout>